--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -18,7 +18,7 @@
             android:text="Suma" />
 
         <Button
-            android:id="@+id/button2"
+            android:id="@+id/buttonResta"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Resta" />
