--- a/app/src/main/res/layout/activity_resta.xml
+++ b/app/src/main/res/layout/activity_resta.xml
@@ -12,7 +12,21 @@
         android:orientation="vertical">
 
         <EditText
-            android:id="@+id/editTextNumber4"
+            android:id="@+id/editTextNumberX1"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:ems="10"
+            android:inputType="number" />
+
+        <EditText
+            android:id="@+id/editTextNumberY1"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:ems="10"
+            android:inputType="number" />
+
+        <EditText
+            android:id="@+id/editTextNumberTotal1"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:ems="10"
