--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -24,13 +24,13 @@
             android:text="Resta" />
 
         <Button
-            android:id="@+id/button3"
+            android:id="@+id/buttonDiv"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="División" />
 
         <Button
-            android:id="@+id/button4"
+            android:id="@+id/buttonMulti"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Multiplicación" />
