Agregada la función de conversor, y arreglados errores

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -9,7 +9,14 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:background="#C3CF47"
         android:orientation="vertical">
+
+        <Button
+            android:id="@+id/buttonTang"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Conversor de Años a Días" />
 
         <Button
             android:id="@+id/buttonSuma"
@@ -24,7 +31,7 @@
             android:text="Resta" />
 
         <Button
-            android:id="@+id/buttonDiv"
+            android:id="@+id/buttonDivision"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="División" />
@@ -34,6 +41,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Multiplicación" />
+
     </LinearLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
