--- a/app/src/main/res/layout/activity_multiplicacion.xml
+++ b/app/src/main/res/layout/activity_multiplicacion.xml
@@ -4,29 +4,30 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".DivActivity">
+    tools:context=".MultiplicacionActivity">
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:background="#9A70E4"
         android:orientation="vertical">
 
         <EditText
-            android:id="@+id/editTextNumberXD"
+            android:id="@+id/editTextNumberXM"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:ems="10"
             android:inputType="number" />
 
         <EditText
-            android:id="@+id/editTextNumberYD"
+            android:id="@+id/editTextNumberYM"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:ems="10"
             android:inputType="number" />
 
         <EditText
-            android:id="@+id/editTextNumberTotalD"
+            android:id="@+id/editTextNumberTotalM"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:ems="10"
