--- a/app/src/main/res/layout/activity_tangente.xml
+++ b/app/src/main/res/layout/activity_tangente.xml
@@ -4,29 +4,31 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".SumaActivity">
+    tools:context=".ConvertirActivity">
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:background="#93EF97"
         android:orientation="vertical">
 
         <EditText
-            android:id="@+id/editTextNumberXM"
+            android:id="@+id/editTextNumberXT"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:ems="10"
             android:inputType="number" />
 
         <EditText
-            android:id="@+id/editTextNumberYM"
+            android:id="@+id/editTextNumberU"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:backgroundTint="#8BC34A"
             android:ems="10"
             android:inputType="number" />
 
         <EditText
-            android:id="@+id/editTextNumberTotalM"
+            android:id="@+id/editTextNumberTotalT"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:ems="10"
